--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+.logo-image{
+  width: 150px;
+  text-align: center;
+}
+
 html {
   font-family: 'Roboto Slab', sans-serif;
   line-height: 1.5;
@@ -27,6 +32,7 @@ body {
   background-repeat: repeat;
   background-size: 100% 100%, 30% 30%, 100% 100%;
   min-height: 110rem;
+  text-align: center;
 }
 
 header {
